Revision history for Log-UDP-Server

0.03	2010-04-14
	Added minimum perl version required information.
	Upgraded to Module::Install 0.95.
	Now depends on Data-Serializable 0.03.

0.02	2009-05-12
	Missing undocumented constant DATAGRAM_MAXLEN in t/pod-coverage.t.

0.01    2009-05-12
        Initial version.