@@ -1,19 +1,0 @@
-Changes
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/Log/UDP/Server.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00-load.t
-t/20_socket.t
-t/boilerplate.t
-t/pod-coverage.t
-t/pod.t
