@@ -1,0 +1,46 @@
+name    = Log-UDP-Server
+author  = Robin Smidsrød <robin@smidsrod.no>
+license = Perl_5
+copyright_holder = Robin Smidsrød
+
+;Semantic versioning, see http://semver.org/
+version = 0.40.0
+
+[NextRelease]
+[@Git]
+
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
+[MetaJSON]
+[PkgVersion]
+[PodWeaver]
+
+[MetaResources]
+repository.url  = git://github.com/robinsmidsrod/Log-UDP-Server.git
+repository.web  = http://github.com/robinsmidsrod/Log-UDP-Server
+repository.type = git
+
+[InstallGuide]
+[ReadmeFromPod]
+[ReadmeMarkdownFromPod]
+[CopyReadmeFromBuild]
+
+[PodSyntaxTests]
+[PodCoverageTests]
+[CriticTests]
+[KwaliteeTests]
+[NoTabsTests]
+[EOLTests]
+
+;Need to get my signing stuff setup properly...
+;[Signature]
+
+[AutoPrereqs]
+
+[Prereqs]
+Data::Serializable = 0.40.0 ; # eagerly awaiting with-version-based auto-detection in AutoPrereqs
+
+[Prereqs / RuntimeRecommends ]
+Readonly::XS = 0
