@@ -1,5 +1,12 @@
 Revision history for Log-UDP-Server
 
+{{$NEXT}}
+	Migrated from Module::Install to Dist::Zilla
+	Now uses Semantic Versioning (http://semver.org/)
+	 - Hopefully 0.40.0 is equiv. to 0.04 (old-style)
+	Improved some documentation.
+	Changed from 'use constant' to 'use Readonly'.
+
 0.03	2010-04-14
 	Added minimum perl version required information.
 	Upgraded to Module::Install 0.95.
